--- a/components/module/WelcomeD.module.css
+++ b/components/module/WelcomeD.module.css
@@ -103,7 +103,7 @@
     color: #3D3D3D;
     font-size: 1.1rem;
 }
-
+/* 
 .type input {
     margin: 20px 10px;
     width: 80px;
@@ -117,8 +117,30 @@
 
 .type input:focus {
     outline: none;
+} */
+
+.input  {
+    margin: 10px auto;
+    text-align: right;
 }
 
+.input input {
+    margin: 20px 10px;
+    width: 80px;
+    height: 70px;
+    border-radius: 10px;
+    background-color: #F7F7F7;
+    border:none ;
+    font-family:'Roboto', sans-serif, Helvetica Neue;
+    font-size : 1.4rem;
+    font-weight:500;
+    text-align: center;
+    
+}
+
+.input input:focus {
+    outline: none;
+}
 
 .type input::-webkit-outer-spin-button {
     -webkit-appearance: none;
