--- a/components/module/LogginFormD.module.css
+++ b/components/module/LogginFormD.module.css
@@ -106,9 +106,10 @@
 
 .type label {
     width: 400px;
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 500;
     text-align: right;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .type input {
@@ -153,7 +154,18 @@
     cursor: pointer;
 }
 
-.type button:focus {
-    outline: none;
+.type button:hover {
+    background-color: #f05151;
 }
 
+.type button:focus {
+    outline: none;
+
+}
+
+.error {
+    margin: 20px 0;
+    color: red;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
