--- a/components/module/WelcomeM.module.css
+++ b/components/module/WelcomeM.module.css
@@ -69,7 +69,7 @@
     border-radius: 10px;
     text-align: right;
     width: 350px;
-    height: 250px;
+    height: 300px;
 }
 .form label {
     /* width: 200px; */
@@ -131,8 +131,6 @@
     cursor: pointer;
 }
 
-
-
 .photo {
     position: absolute;    
     display: flex;
@@ -140,4 +138,9 @@
     align-items: center;
     margin-top: -190px;
     margin-right: 10px;
+}
+
+.error {
+    margin: 20px auto;
+    color: red;
 }
